// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation-dropdown Basic renders as expected 1`] = `
<div
  className="dr-ui--navigation-dropdown relative"
>
  <button
    aria-controls="dr-ui--navigation-dropdown"
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Toggle menu"
    className="flex-parent flex-parent--center-main flex-parent--space-between-main txt-truncate border border--gray-light py6 px12 bg-white round-full w-full color-gray-on-hover"
    onClick={[Function]}
  >
    Title one
    <svg
      className="events-none icon inline-block align-t"
      focusable="false"
      role="presentation"
      style={
        Object {
          "height": 18,
          "width": 18,
        }
      }
    >
      <use
        xlinkHref="#icon-chevron-down"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </button>
  <nav
    aria-hidden={true}
    className="none"
    id="dr-ui--navigation-dropdown"
  >
    <ul>
      <li
        className="mb3"
      >
        <a
          className="link link--gray"
          href="page-one"
        >
          Title one
        </a>
      </li>
      <li
        className="mb3"
      >
        <a
          className="link link--gray"
          href="page-two"
        >
          Title two
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`navigation-dropdown Custom label renders as expected 1`] = `
<div
  className="dr-ui--navigation-dropdown relative"
>
  <button
    aria-controls="label"
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Toggle menu"
    className="flex-parent flex-parent--center-main flex-parent--space-between-main txt-truncate border border--gray-light py6 px12 bg-white round-full w-full color-gray-on-hover"
    onClick={[Function]}
  >
    Options
    <svg
      className="events-none icon inline-block align-t"
      focusable="false"
      role="presentation"
      style={
        Object {
          "height": 18,
          "width": 18,
        }
      }
    >
      <use
        xlinkHref="#icon-chevron-down"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </button>
  <nav
    aria-hidden={true}
    className="none"
    id="label"
  >
    <ul>
      <li
        className="mb3"
      >
        <a
          className="link link--gray"
          href="page-one"
        >
          Title one
        </a>
      </li>
      <li
        className="mb3"
      >
        <a
          className="link link--gray"
          href="page-two"
        >
          Title two
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`navigation-dropdown Missing \`currentPath\` renders as expected 1`] = `
<div
  className="dr-ui--navigation-dropdown relative"
>
  <button
    aria-controls="menu"
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Toggle menu"
    className="flex-parent flex-parent--center-main flex-parent--space-between-main txt-truncate border border--gray-light py6 px12 bg-white round-full w-full color-gray-on-hover"
    onClick={[Function]}
  >
    Menu
    <svg
      className="events-none icon inline-block align-t"
      focusable="false"
      role="presentation"
      style={
        Object {
          "height": 18,
          "width": 18,
        }
      }
    >
      <use
        xlinkHref="#icon-chevron-down"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </button>
  <nav
    aria-hidden={true}
    className="none"
    id="menu"
  >
    <ul>
      <li
        className="mb3"
      >
        <a
          className="link link--gray"
          href="page-one"
        >
          Title one
        </a>
      </li>
      <li
        className="mb3"
      >
        <a
          className="link link--gray"
          href="page-two"
        >
          Title two
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
